// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add-patterns should create a trie 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "depth": 4,
                  "parent": [Circular],
                  "path": "^hers",
                  "pattern": "hers",
                  "token": "s",
                },
              ],
              "depth": 3,
              "parent": [Circular],
              "path": "^her",
              "token": "r",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^he",
          "pattern": "he",
          "token": "e",
        },
        Object {
          "children": Array [
            Object {
              "depth": 3,
              "parent": [Circular],
              "path": "^his",
              "pattern": "his",
              "token": "s",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^hi",
          "token": "i",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^h",
      "token": "h",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "depth": 3,
              "parent": [Circular],
              "path": "^she",
              "pattern": "she",
              "token": "e",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^sh",
          "token": "h",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^s",
      "token": "s",
    },
  ],
  "depth": 0,
  "path": "^",
}
`;

exports[`add-patterns should create a trie 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "depth": 7,
                              "parent": [Circular],
                              "path": "^abcdefz",
                              "pattern": "abcdefz",
                              "token": "z",
                            },
                          ],
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^abcdef",
                          "pattern": "abcdef",
                          "token": "f",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^abcde",
                      "token": "e",
                    },
                  ],
                  "depth": 4,
                  "parent": [Circular],
                  "path": "^abcd",
                  "pattern": "abcd",
                  "token": "d",
                },
              ],
              "depth": 3,
              "parent": [Circular],
              "path": "^abc",
              "token": "c",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^ab",
          "pattern": "ab",
          "token": "b",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^a",
      "token": "a",
    },
    Object {
      "children": Array [
        Object {
          "depth": 2,
          "parent": [Circular],
          "path": "^bc",
          "pattern": "bc",
          "token": "c",
        },
        Object {
          "depth": 2,
          "parent": [Circular],
          "path": "^bd",
          "pattern": "bd",
          "token": "d",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^b",
      "token": "b",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "depth": 3,
              "parent": [Circular],
              "path": "^cde",
              "pattern": "cde",
              "token": "e",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^cd",
          "pattern": "cd",
          "token": "d",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^c",
      "pattern": "c",
      "token": "c",
    },
    Object {
      "depth": 1,
      "parent": [Circular],
      "path": "^e",
      "pattern": "e",
      "token": "e",
    },
    Object {
      "depth": 1,
      "parent": [Circular],
      "path": "^f",
      "pattern": "f",
      "token": "f",
    },
  ],
  "depth": 0,
  "path": "^",
}
`;

exports[`add-patterns should create a trie 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "depth": 11,
                                              "parent": [Circular],
                                              "path": "^antioxidant",
                                              "pattern": "antioxidant",
                                              "token": "t",
                                            },
                                          ],
                                          "depth": 10,
                                          "parent": [Circular],
                                          "path": "^antioxidan",
                                          "token": "n",
                                        },
                                      ],
                                      "depth": 9,
                                      "parent": [Circular],
                                      "path": "^antioxida",
                                      "token": "a",
                                    },
                                  ],
                                  "depth": 8,
                                  "parent": [Circular],
                                  "path": "^antioxid",
                                  "token": "d",
                                },
                              ],
                              "depth": 7,
                              "parent": [Circular],
                              "path": "^antioxi",
                              "token": "i",
                            },
                          ],
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^antiox",
                          "token": "x",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^antio",
                      "token": "o",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "depth": 9,
                                      "parent": [Circular],
                                      "path": "^antipathy",
                                      "pattern": "antipathy",
                                      "token": "y",
                                    },
                                  ],
                                  "depth": 8,
                                  "parent": [Circular],
                                  "path": "^antipath",
                                  "token": "h",
                                },
                              ],
                              "depth": 7,
                              "parent": [Circular],
                              "path": "^antipat",
                              "token": "t",
                            },
                          ],
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^antipa",
                          "token": "a",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^antip",
                      "token": "p",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "depth": 9,
                                      "parent": [Circular],
                                      "path": "^antivirus",
                                      "pattern": "antivirus",
                                      "token": "s",
                                    },
                                  ],
                                  "depth": 8,
                                  "parent": [Circular],
                                  "path": "^antiviru",
                                  "token": "u",
                                },
                              ],
                              "depth": 7,
                              "parent": [Circular],
                              "path": "^antivir",
                              "token": "r",
                            },
                          ],
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^antivi",
                          "token": "i",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^antiv",
                      "token": "v",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "depth": 7,
                              "parent": [Circular],
                              "path": "^antigen",
                              "pattern": "antigen",
                              "token": "n",
                            },
                          ],
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^antige",
                          "token": "e",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^antig",
                      "token": "g",
                    },
                  ],
                  "depth": 4,
                  "parent": [Circular],
                  "path": "^anti",
                  "token": "i",
                },
              ],
              "depth": 3,
              "parent": [Circular],
              "path": "^ant",
              "token": "t",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^an",
          "token": "n",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^a",
      "token": "a",
    },
  ],
  "depth": 0,
  "path": "^",
}
`;

exports[`add-patterns should create a trie 4`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "depth": 6,
                          "parent": [Circular],
                          "path": "^abcdef",
                          "pattern": "abcdef",
                          "token": "f",
                        },
                      ],
                      "depth": 5,
                      "parent": [Circular],
                      "path": "^abcde",
                      "pattern": "abcde",
                      "token": "e",
                    },
                  ],
                  "depth": 4,
                  "parent": [Circular],
                  "path": "^abcd",
                  "pattern": "abcd",
                  "token": "d",
                },
              ],
              "depth": 3,
              "parent": [Circular],
              "path": "^abc",
              "pattern": "abc",
              "token": "c",
            },
          ],
          "depth": 2,
          "parent": [Circular],
          "path": "^ab",
          "pattern": "ab",
          "token": "b",
        },
      ],
      "depth": 1,
      "parent": [Circular],
      "path": "^a",
      "pattern": "a",
      "token": "a",
    },
  ],
  "depth": 0,
  "path": "^",
}
`;
